[gd_scene load_steps=19 format=2]

[ext_resource path="res://player/player.png" type="Texture" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]
[ext_resource path="res://player/Idle.gd" type="Script" id=3]
[ext_resource path="res://state_machine/state_machine.gd" type="Script" id=4]
[ext_resource path="res://player/Jump.gd" type="Script" id=5]
[ext_resource path="res://player/Move.gd" type="Script" id=6]
[ext_resource path="res://boxes/Hurtbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://boxes/Hitbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://player/Hold.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.5, 6 )

[sub_resource type="Animation" id=3]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 18, 19 ]
}

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=6]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=7]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}

[sub_resource type="Animation" id=8]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 6, 7 ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 3.5, 4 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 2
script = ExtResource( 2 )
max_health = 5

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Hold" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Pivot" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="Pivot"]
position = Vector2( 0.5, -8 )
texture = ExtResource( 1 )
vframes = 4
hframes = 6
frame = 8

[node name="HoldTop" type="Area2D" parent="Pivot"]
position = Vector2( -5, -11 )
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/HoldTop"]
shape = SubResource( 1 )

[node name="HoldBottom" type="Area2D" parent="Pivot"]
position = Vector2( -5, -9 )
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/HoldBottom"]
shape = SubResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Climb = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/JumpDown = SubResource( 5 )
anims/JumpMid = SubResource( 6 )
anims/JumpUp = SubResource( 7 )
anims/Walk = SubResource( 8 )

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]

[node name="Hitbox" parent="." instance=ExtResource( 8 )]
collision_layer = 0
collision_mask = 32

[node name="Hurtbox" parent="." instance=ExtResource( 7 )]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -7 )
shape = SubResource( 9 )
[connection signal="body_entered" from="Pivot/HoldTop" to="StateMachine/Jump" method="_on_HoldTop_body_entered"]
[connection signal="body_exited" from="Pivot/HoldTop" to="StateMachine/Jump" method="_on_HoldTop_body_exited"]
[connection signal="body_entered" from="Pivot/HoldBottom" to="StateMachine/Jump" method="_on_HoldBottom_body_entered"]
[connection signal="body_exited" from="Pivot/HoldBottom" to="StateMachine/Jump" method="_on_HoldBottom_body_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hitbox"]

[editable path="Hurtbox"]
